rhoai-kvcache-offload-eval/manifests/rhoai/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
  labels:
    name: redhat-ods-operator
